fixed spawn on smaller devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,18 @@ html, body{
     .menubtn{
       padding-top: 10px;
     }
+    #activities {
+      padding-top:150px;
+    }
+    #home{
+      padding-top:150px;
+    }
+    #sponsors{
+      padding-top:150px;
+    }
+    #organisers{
+      padding-top: 150px;
+    }
 }
 
 @media all and (min-width:401px) and (max-width:800px) {
@@ -71,6 +83,18 @@ html, body{
     .menubtn{
       padding-top: 10px;
     }
+    #activities {
+      padding-top:200px;
+    }
+    #home{
+      padding-top:200px;
+    }
+    #sponsors{
+      padding-top:200px;
+    }
+    #organisers{
+      padding-top: 200px;
+    }
 }
 
 @media all and (min-width:800px) and (max-width:2000px) {
@@ -81,6 +105,18 @@ html, body{
     .activitiespara {
         font-size: 20px;
         font-weight: 30px
+    }
+    #activities {
+      padding-top:150px;
+    }
+    #home{
+      padding-top:150px;
+    }
+    #sponsors{
+      padding-top:150px;
+    }
+    #organisers{
+      padding-top: 150px;
     }
 }
 
@@ -168,18 +204,7 @@ html, body{
   color:rgba(0,0,0,0.6);
 
 }
-#activities {
-  padding-top:150px;
-}
-#home{
-  padding-top:150px;
-}
-#sponsors{
-  padding-top:150px;
-}
-#organisers{
-  padding-top: 150px;
-}
+
 .hameid-loader-overlay {
     width: 100%;
     height: 100%;
